--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
@@ -11,21 +11,91 @@
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300&family=Oswald:wght@300&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
-    <style>
 
-    </style>
 </head>
 
 <body>
-    <h1 align="center">Daily Weather Update</h1>
-    <div align="center">
-        <form class="weathersearch">
-            <input placeholder="enter city name" type="text">
-            <button type="text">Search</button>
-            <div class="weather">
-        </form>
-    </div>
-    <script src="./weather.js"></script>
+    <div class="weather-app" align="center">
+        <section class="form-section">
+            <h2>Current Weather</h2>
+            <form id="weatherForm">
+                <input type="text" id="cityInput" placeholder="Enter city">
+                <button type="submit">Get Weather</button>
+            </form>
+        </section>
+
+        <section class="weather-info-section">
+            <h2>Weather Information</h2>
+            <table class="weather-info">
+                <tbody>
+                    <tr>
+                        <td colspan="2">
+                            <h3 align="center">Basic Info</h3>
+                        </td>
+                    </tr>
+                    <tr id="cityName" align="center">
+                    </tr>
+                    <tr id="cityTemp" align="center">
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <h3 align="center">Daily Stats</h3>
+                        </td>
+                    </tr>
+                    <tr id="tempMax" align="center">
+                    </tr>
+                    <tr id="tempMin" align="center">
+                    </tr>
+                    <tr id="humidity" align="center">
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <h3 align="center">Forecast</h3>
+                        </td>
+                    </tr>
+                    <tr id="forecast" align="center">
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <script>
+            const form = document.getElementById('weatherForm');
+            const table = document.querySelector('.weatherInfo');
+
+            form.addEventListener('submit', async (event) => {
+                event.preventDefault();
+                const city = document.getElementById('cityInput').value;
+                await getWeatherData(city);
+            });
+            const conversion = (kelvin) => {
+                return ((kelvin - 273.15) * 9 / 5 + 32).toFixed(1)
+            }
+
+            const weatherData = (weather) => {
+                const cityNameRow = document.getElementById('cityName');
+                const cityTempRow = document.getElementById('cityTemp');
+                const tempMaxRow = document.getElementById('tempMax');
+                const tempMinRow = document.getElementById('tempMin');
+                const humidityRow = document.getElementById('humidity');
+                const forecastRow = document.getElementById('forecast');
+
+                // Inside weatherData function
+                cityNameRow.innerHTML = `<td> City: <td>${weather.name}</td>`;
+                cityTempRow.innerHTML = `<td> Current: <td>${conversion(weather.main.temp)}°F</td>`;
+                tempMaxRow.innerHTML = `<td> Daily High: <td>${conversion(weather.main.temp_max)}°F</td>`;
+                tempMinRow.innerHTML = `<td> Daily Low: <td>${conversion(weather.main.temp_min)}°F</td>`;
+                humidityRow.innerHTML = `<td> Humidity: <td>${weather.main.humidity}%</td>`;
+                forecastRow.innerHTML = `<td> Forecast: <td>${weather.weather[0].description}</td>`;
+            }
+
+            const getWeatherData = async (city) => {
+                const APIKEY = '09bc2aa6c78028e851fc4335aa5322a8'
+                const response = await fetch(`https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${APIKEY}`)
+                const data = await response.json()
+                weatherData(data)
+            }
+        </script>
 </body>
 
 </html>
