--- a/main.html
+++ b/main.html
@@ -60,8 +60,8 @@
         </section>
 
         <script>
-            const form = document.getElementById('weatherForm');
-            const table = document.querySelector('.weatherInfo');
+            const form = document.getElementById('form');
+            const table = document.querySelector('.weather');
 
             form.addEventListener('submit', async (event) => {
                 event.preventDefault();
