--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
     <div class="weather-app" align="center">
         <section class="form-section">
             <h2>Current Weather</h2>
-            <form id="weatherForm">
+            <form id="form">
                 <input type="text" id="cityInput" placeholder="Enter city">
                 <button type="submit">Get Weather</button>
             </form>
